--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	</nav>
 
 	<div id="main-content" class="container">
-		<div ng-view></div>
+		<div ng-view class="reveal-animation"></div>
 	</div> <!-- /container -->        
 
 	<script src="js/jquery.min.js"></script>
